<resources>
    <string name="app_name">Homestay Booking</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string-array name="spinnerItems">
        <item>By village</item>
        <item>By street</item>
        <item>By district</item>
        <item>By city</item>
    </string-array>
    <string name="customer_guide_text" translatable="false">This section is for customers. Customers can explore homestays and book any available homestay.</string>
    <string name="owner_guide_text" translatable="false">This section is for owners of homestays. Homestay providers can create and manage their homestays.</string>
    <string name="booking_home_button_text" translatable="false">Booking a homestay</string>
    <string name="manage_home_button_text" translatable="false">Manage your homestays</string>
    <string name="language" translatable="false">Language</string>
    <string name="tajik" translatable="false">Tajik</string>
    <string name="english" translatable="false">English</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="download_map">Download Map</string>
    <string name="login_hint">Login (Email)</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="signup_text">Don\'t have an account? Sign up!</string>
    <string name="forgot_password_text">Forgot your password?</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="profile_image">Profile image</string>
    <string name="profile_name">Mirzonabot</string>
    <string name="profile_email">Mirzonabot</string>
    <string name="toggle_label">toggle</string>
    <string name="dropdown_title">language</string>
    <string name="dropdown_item_1_title">lang_1</string>
    <string name="dropdown_item_2_title">lang_2</string>
    <string name="tajiklanguage">TJ</string>
    <string name="russianlanguage">RU</string>
    <string name="englishlanguage">EN</string>
    <string name="language_string">Language</string>
    <string name="internet_string">Internet</string>
    <string name="dark_mode_string">Dark Mode</string>
    <string name="Client_string">Client</string>
    <string name="provider_string">Provider</string>
    <string name="buyer_seller_string">User mode</string>
    <string name="homestays">HomeStays</string>
    <string name="bookings_string">Bookings</string>
    <string name="search_homestays">Search Homestays</string>
    <string name="download_map_string">Download Map</string>
</resources>