<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggle_button_languages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true">
        <Button
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/tajiklanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tajiklanguage"
            android:padding="8dp"
            android:textSize="12sp"
            android:minWidth="48dp" />
        <Button
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/russianlanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/russianlanguage"
            android:padding="8dp"
            android:textSize="12sp"
            android:minWidth="48dp" />
        <Button
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/englishlanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/englishlanguage"
            android:padding="8dp"
            android:textSize="12sp"
            android:minWidth="48dp" />
    </com.google.android.material.button.MaterialButtonToggleGroup>
</LinearLayout>
